Fixed text alignment

--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -18,7 +18,7 @@
   color: var(--secondary-color);
   width: 50vw;
   margin-top: 2rem;
-  text-align: center;
+  text-align: justify;
 }
 
 .banner_button {
@@ -33,12 +33,8 @@
   flex-direction: column;
 }
 
-.text_left {
-  text-align: left;
-}
-
-.text_right {
-  text-align: right;
+.text_justify {
+  text-align: justify;
 }
 
 .grid {
@@ -50,11 +46,10 @@
     display: flex;
     justify-content: center;
   }
-  .text_left,
-  .text_right {
-    text-align: center;
-  }
   .grid_item_column {
     align-items: center;
+  }
+  .banner_text {
+    width: 70vw;
   }
 }
